test/visibility/rename/renameUsedMod/renamePrivateModuleOnUse.good
renamePrivateModuleOnUse.chpl:12: In function 'main':
renamePrivateModuleOnUse.chpl:15: error: 'In' undeclared (first use this function)
